crates/pmcp-server-toolkit/tests/compile_fail/token_secret_no_clone.stderr
error[E0599]: no method named `clone` found for struct `SecretValue` in the current scope
 --> tests/compile_fail/token_secret_no_clone.rs:9:16
  |
9 |     let _t = s.clone();
  |                ^^^^^ method not found in `SecretValue`
